--- a/templates/layouts/base_layout.html
+++ b/templates/layouts/base_layout.html
@@ -87,7 +87,7 @@
                 <div></div>
             </div>
             <div class="chatbox__footer">
-                <button><i class="fa-solid fa-microphone microphone__button"></i></button>
+                <button class="microphone__button"><i class="fa-solid fa-microphone"></i></button>
                 <input type="text" placeholder="Ecrivez un message...">
                 <button class="chatbox__send--footer send__button">Envoyer</button>
             </div>
