--- a/templates/layouts/base_layout.html
+++ b/templates/layouts/base_layout.html
@@ -115,33 +115,19 @@
             <div class="col-lg-4 mb-5 mb-lg-0">
                 <img class="avatar" src="{{ url_for('static', filename='./assets/img/avatars/max.png') }}"
                      alt="avatar-max"/>
-                <h4 class="mb-4">Max</h4>
-                <p class="lead mb-0">
-                    Max travaille chez CGI en tant qu'apprenti ingénieur en IA.
-                    <br>
-                    En tant que prestataire, il effectue des missions touchant au spectre du NLP.
-                </p>
+                <h4 class="mb-4">Max Lesage</h4>
             </div>
             <!-- Corentin Grégoire-->
             <div class="col-lg-4 mb-5 mb-lg-0">
                 <img class="avatar" src="{{ url_for('static', filename='./assets/img/avatars/corentin.png') }}"
                      alt="avatar-coco"/>
-                <h4 class="mb-4">Corentin</h4>
-                <p class="lead mb-0">
-                    Corentin est apprenti Data Engineer chez Dassault Aviation.
-                    <br>
-                    Il y apprend à traiter une quantité importante de données et à les faire parler.
-                </p>
+                <h4 class="mb-4">Corentin Grégoire</h4>
             </div>
             <!-- Ammar Kheder-->
             <div class="col-lg-4 mb-5 mb-lg-0">
                 <img class="avatar" src="{{ url_for('static', filename='./assets/img/avatars/ammar.png') }}"
                      alt="avatar-ammar"/>
-                <h4 class="mb-4">Ammar</h4>
-                <p class="lead mb-0">
-                    Ammar, en tant qu'apprenti ingénieur, s'occupe du web, mais également de la classification de cartes
-                    à collectionner avec de l'IA chez SGS Safeguard.
-                </p>
+                <h4 class="mb-4">Ammar Kheder</h4>
             </div>
         </div>
     </div>
