--- a/templates/login.html
+++ b/templates/login.html
@@ -96,7 +96,7 @@
                                                 </div>
                                                 <input type="submit" name="submit" class="btn mt-4"
                                                        value="S'inscrire" id="signup_button">
-                                                <!-- Warning message if the user is already in DB-->
+                                                <!-- Error message if the user is already in DB-->
                                                 {% if msg %}
                                                     <p class="mb-0 mt-4 text-center">{{ msg }}</p>
                                                 {% endif %}
