J'ai créé le mécanisme d'oubli de mot de passe, plus qu'à faire le template correspondant pour réinitialiser son mot de passe et vérifier que le lien temporaire expire bien après 10 minutes d'existance

--- a/templates/forgot.html
+++ b/templates/forgot.html
@@ -8,27 +8,31 @@
 
 {% block page_title %}Mot de passe oublié{% endblock %}
 {% block page_desc %}
-    <div class="card-3d-wrap mx-auto" style="height: 300px">
-        <div class="card-3d-wrapper">
-            <div class="card-front">
-                <div class="center-wrap">
-                    <form action="/forgot-password" class="section text-center" method="post">
-                        <div class="form-group mt-2">
-                            <h5 class="mb-4 pb-3">Saisissez l'email CNAM avec lequel vous vous êtes inscrit :</h5>
-                            <input type="email" name="forgot_email" class="form-style"
-                                   placeholder="Adresse email CNAM" id="forgot_email"
-                                   title="Une adresse auditeur du CNAM ressemble à : prenom.nom.auditeur@lecnam.net"
-                                   pattern="[\w]{1,}[.]{1}[\w]{1,}[.]{1}auditeur@lecnam.net"
-                                   autocomplete="off" required>
-                            <i class="input-icon uil uil-at"></i>
-                            <input type="submit" name="submit" class="btn mt-4"
-                                   value="Envoyer" id="forgot_button">
-                        </div>
-                    </form>
+    {% if not send %}
+        <div class="card-3d-wrap mx-auto" style="height: 300px">
+            <div class="card-3d-wrapper">
+                <div class="card-front">
+                    <div class="center-wrap">
+                        <form action="/forgot-password" class="section text-center" method="post">
+                            <div class="form-group mt-2">
+                                <h5 class="mb-4 pb-3">Saisissez l'email CNAM avec lequel vous vous êtes inscrit :</h5>
+                                <input type="email" name="forgot_email" class="form-style"
+                                       placeholder="Adresse email CNAM" id="forgot_email"
+                                       title="Une adresse auditeur du CNAM ressemble à : prenom.nom.auditeur@lecnam.net"
+                                       pattern="[\w]{1,}[.]{1}[\w]{1,}[.]{1}auditeur@lecnam.net"
+                                       autocomplete="off" required>
+                                <i class="input-icon uil uil-at"></i>
+                                <input type="submit" name="submit" class="btn mt-4"
+                                       value="Envoyer" id="forgot_button">
+                            </div>
+                        </form>
+                    </div>
                 </div>
             </div>
         </div>
-    </div>
+    {% else %}
+        Un email contenant un lien de réinitialisation de votre mot de passe vient de vous être envoyé.
+    {% endif %}
 {% endblock %}
 
 {% block content %}
