forgot password is working

--- a/templates/forgot.html
+++ b/templates/forgot.html
@@ -6,9 +6,17 @@
     <link href="{{ url_for('static', filename='./css/login.css') }}" rel="stylesheet">
 {% endblock %}
 
-{% if not arg %}
-    {% block page_title %}Mot de passe oublié{% endblock %}
-    {% block page_desc %}
+
+{% block page_title %}
+    {% if not arg %}
+        Mot de passe oublié
+    {% else %}
+        Réinitialisation du mot de passe
+    {% endif %}
+{% endblock %}
+
+{% block page_desc %}
+    {% if not arg %}
         {% if not send %}
             <div class="card-3d-wrap mx-auto" style="height: 300px">
                 <div class="card-3d-wrapper">
@@ -35,15 +43,12 @@
         {% else %}
             Un email contenant un lien de réinitialisation de votre mot de passe vient de vous être envoyé.
         {% endif %}
-    {% endblock %}
-{% else %}
-    {% block page_title %}Réinitialisation du mot de passe{% endblock %}
-    {% block page_desc %}
-        <div class="card-3d-wrap mx-auto" style="height: 300px">
+    {% else %}
+        <div class="card-3d-wrap mx-auto" style="height: 350px">
             <div class="card-3d-wrapper">
                 <div class="card-front">
                     <div class="center-wrap">
-                        <form action="/forgot-password/{% arg %}" class="section text-center" method="post">
+                        <form action="/forgot-password/{{ arg }}" class="section text-center" method="post">
                             <div class="form-group mt-2">
                                 <h5 class="mb-4 pb-3">Veuillez entrer votre nouveau mot de passe et le confirmer.
                                     :</h5>
@@ -57,8 +62,10 @@
                                        pattern="(?=.*\d)(?=.*[a-z])(?=.*[A-Z]).{10,}"
                                        autocomplete="off" required>
                                 <i class="input-icon uil uil-lock-alt"></i>
+                            </div>
+                            <div class="form-group mt-2">
                                 <input type="password" name="verified_new_password" class="form-style"
-                                       placeholder="Mot de passe" id="verified_new_password"
+                                       placeholder="Confirmez votre mot de passe" id="verified_new_password"
                                        title="Votre mot de passe doit contenir au minimum :
                                                            une lettre minuscule,
                                                            une lettre majuscule,
@@ -75,8 +82,9 @@
                 </div>
             </div>
         </div>
-    {% endblock %}
-{% endif %}
+    {% endif %}
+{% endblock %}
+
 
 {% block content %}
 
