système d'authentification fonctionnel

--- a/templates/email-verification.html
+++ b/templates/email-verification.html
@@ -1,16 +1,36 @@
 {% extends "./layouts/base_layout.html" %}
 
-{% block title %}Email de vérification{% endblock %}
+{% block title %}
+    {% if not arg %}
+        Email de vérification
+    {% else %}
+        Vérification effectuée
+    {% endif %}
+{% endblock %}
 
-{% block page_title %}Email de vérification{% endblock %}
+{% block page_title %}
+    {% if not arg %}
+        Email de vérification
+    {% else %}
+        Vérification effectuée
+    {% endif %}
+{% endblock %}
+
 {% block page_desc %}
-    Un email de vérification vous a bien été adressé, pensez à regarder dans vos spams. (L'expéditeur est lecnambot@gmail.com)
-    <br>
-    Une fois le lien reçu, pensez à cliquer dessus et vous serez redirigé vers votre compte fraîchement créé.
-    <br>
-    Si vous ne cliquez pas sur ce lien. Votre inscription n'est pas considérée comme validée et votre compte n'est donc pas créé.
+    {% if not arg %}
+        Un email de vérification vous a bien été adressé, pensez à regarder dans vos spams. (L'expéditeur est
+        lecnambot@gmail.com)
+        <br>
+        Une fois le lien reçu, pensez à cliquer dessus et vous serez redirigé vers votre compte fraîchement créé.
+        <br><br>
+        Si vous ne cliquez pas sur ce lien. Votre inscription n'est pas considérée comme validée et votre compte n'est
+        donc
+        pas créé.
+    {% else %}
+        Votre email a bien été vérifié.
+        <br><br>
+        Vous pouvez désormais vous connecter à CnamBot.
+    {% endif %}
 {% endblock %}
 
-{% block content %}
-
-{% endblock %}
+{% block content %}{% endblock %}
