--- a/templates/layouts/base_layout.html
+++ b/templates/layouts/base_layout.html
@@ -117,26 +117,30 @@
                 <img class="avatar" src="{{ url_for('static', filename='./assets/img/avatars/max.png') }}"
                      alt="avatar-max"/>
                 <h4 class="mb-4">Max Lesage</h4>
-                <a href="https://www.linkedin.com/in/max-lesage-8137b81b7/"><img
-                        src="{{ url_for('static', filename='./assets/img/linkedin.png') }}" alt="linkedin-max"
-                        style="width:32px;height:32px"></a>
+                <a href="https://www.linkedin.com/in/max-lesage-8137b81b7/">
+                    <img src="{{ url_for('static', filename='./assets/img/linkedin.png') }}" alt="linkedin-max"
+                         style="width:32px;height:32px">
+                </a>
             </div>
             <!-- Corentin Grégoire-->
             <div class="col-lg-4 mb-5 mb-lg-0">
                 <img class="avatar" src="{{ url_for('static', filename='./assets/img/avatars/corentin.png') }}"
                      alt="avatar-coco"/>
                 <h4 class="mb-4">Corentin Grégoire</h4>
-                <a href=""><img src="{{ url_for('static', filename='./assets/img/linkedin.png') }}"
-                                alt="linkedin-corentin"
-                                style="width:32px;height:32px"></a>
+                <a href="">
+                    <img src="{{ url_for('static', filename='./assets/img/linkedin.png') }}" alt="linkedin-corentin"
+                         style="width:32px;height:32px">
+                </a>
             </div>
             <!-- Ammar Kheder-->
             <div class="col-lg-4 mb-5 mb-lg-0">
                 <img class="avatar" src="{{ url_for('static', filename='./assets/img/avatars/ammar.png') }}"
                      alt="avatar-ammar"/>
                 <h4 class="mb-4">Ammar Kheder</h4>
-                <a href=""><img src="{{ url_for('static', filename='./assets/img/linkedin.png') }}" alt="linkedin-ammar"
-                                style="width:32px;height:32px"></a>
+                <a href="">
+                    <img src="{{ url_for('static', filename='./assets/img/linkedin.png') }}" alt="linkedin-ammar"
+                         style="width:32px;height:32px">
+                </a>
             </div>
         </div>
     </div>
