--- a/static/css/style.css
+++ b/static/css/style.css
@@ -5529,9 +5529,9 @@ textarea.form-control-lg {
 
 .list-group-item-action:hover, .list-group-item-action:focus {
     z-index: 1;
-    color: #495057;
+    color: #f0f0f0;
     text-decoration: none;
-    background-color: #f8f9fa;
+    background-color: #2c3e50;
 }
 
 .list-group-item-action:active {
