--- a/templates/layouts/base_layout.html
+++ b/templates/layouts/base_layout.html
@@ -127,7 +127,7 @@
                 <img class="avatar" src="{{ url_for('static', filename='./assets/img/avatars/corentin.png') }}"
                      alt="avatar-coco"/>
                 <h4 class="mb-4">Corentin Grégoire</h4>
-                <a href="">
+                <a href="https://www.linkedin.com/in/corentin-gr%C3%A9goire-27141b1ba">
                     <img src="{{ url_for('static', filename='./assets/img/linkedin.png') }}" alt="linkedin-corentin"
                          style="width:32px;height:32px">
                 </a>
@@ -137,7 +137,7 @@
                 <img class="avatar" src="{{ url_for('static', filename='./assets/img/avatars/ammar.png') }}"
                      alt="avatar-ammar"/>
                 <h4 class="mb-4">Ammar Kheder</h4>
-                <a href="">
+                <a href="https://fr.linkedin.com/in/ammar-kheder-a37053193">
                     <img src="{{ url_for('static', filename='./assets/img/linkedin.png') }}" alt="linkedin-ammar"
                          style="width:32px;height:32px">
                 </a>
@@ -147,7 +147,7 @@
 </footer>
 <!-- Copyright Section-->
 <div class="copyright py-4 text-center text-white">
-    <div class="container"><small>Copyright &copy; Cnambot 2023</small></div>
+    <div class="container"><small>Copyright &copy; CnamBot 2023</small></div>
 </div>
 <!-- Bootstrap core JS-->
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
