--- a/templates/layouts/base_layout.html
+++ b/templates/layouts/base_layout.html
@@ -157,5 +157,15 @@
 <script src="{{ url_for('static', filename='./js/chatbot.js') }}" type="module"></script>
 <!-- Chat script-->
 <script src="{{ url_for('static', filename='./js/chat.js') }}"></script>
+<!-- WebSocket handler-->
+<script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/4.0.1/socket.io.js"
+        integrity="sha512-q/dWJ3kcmjBLU4Qc47E4A9kTB4m3wuTY7vkFJDTZKjTs8jhyGQnaUrxa0Ytd0ssMZhbNua9hE+E7Qv1j+DyZwA=="
+        crossorigin="anonymous"></script>
+<script type="text/javascript" charset="utf-8">
+    let socket = io();
+    socket.on('connect', function () {
+        socket.emit('my event', {data: 'I\'m connected!'});
+    });
+</script>
 </body>
 </html>
